# avito-script

./: .gitignore  README.md  avito_cars.json  avito_cars.xlsx  pyproject.toml  requirements.txt
avito-script/: .~lock.avito_cars.xlsx#  __main__.py  avito_cars.xlsx
avito_script/: avito_cars.json  avito_cars.xlsx  main.py
