[tool.poetry]
name = "avito-script"
version = "0.1.0"
description = ""
authors = ["luculliano <vederecento@gmail.com>"]
readme = "README.md"
packages = [{include = "avito_script"}]

[tool.poetry.dependencies]
python = "^3.11"
fake-useragent = "^1.1.3"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
